# robotops_msgs

./: .gitignore  CHANGELOG.md  CHANGELOG.rst  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  justfile  package.xml
.github/actions/publish-cargo-codeartifact/: action.yml
.github/actions/publish-debian-s3/: action.yml
.github/workflows/: branch-name-validation.yml  cd.yml  ci.yml  release-dev.yml  release.yml  version-check.yml
debian/: changelog  control  copyright  rules
docs/: INSTALLATION.md
msg/: DiagnosticsReport.msg  StartupDiagnostics.msg  TraceContextChange.msg  TraceEvent.msg
tools/: generate-sdk.sh
